[package]
name = "keyrock"
version = "0.1.0"
authors = ["Petar Dambovaliev <petar.atanasov.1987@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.60"
binance = { git = "https://github.com/wisespace-io/binance-rs.git"}
prost = "0.7"
tonic = "0.4.0"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version =  "0.1", features = ["net"] }
tokio-tungstenite = { version = "0.14.0", features = ["rustls-tls"]}
error-chain = "0.12.4"

[build-dependencies]
tonic-build = { version = "0.4.0", features = ["prost"] }